--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,24 @@
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* .main-header {
+  &.sticky-header { 
+    position: sticky;
+    top:0;
+    animation: stickyHeader 0.3s ease forwards;
+  }
 }
+
+@keyframes stickyHeader {
+  0% {
+    transform: translateY(-64px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+} */
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -28,11 +41,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
